--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "fuse.js": "^7.1.0",
     "globals": "^15.14.0",
     "html-react-parser": "^5.2.2",
+    "html2canvas": "^1.4.1",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lint-staged": "^15.4.3",
     "quill": "^2.0.3",
